modules/Application/test-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: test-ha
    release: test-ha
  name: test-ha
  namespace: test-ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ha
      release: test-ha
  template:
    metadata:
      labels:
        app: test-ha
        release: test-ha
    spec:
      containers:
      - image: lucianocarranza/hello-node:latest
        imagePullPolicy: Always
        name: test-ha
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      restartPolicy: Always
