modules/Application/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-ha
    release: test-ha
  name: test-ha
  namespace: test-ha
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test-ha
    release: test-ha
  type: ClusterIP
