modules/Application/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: test-ha
    release: test-ha
  name: test-ha
  namespace: test-ha
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: test-ha
          servicePort: http
        path: /
